--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "c": "^1.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "systeminformation": "^5.23.5"
   },
